--- a/payload/payload.service
+++ b/payload/payload.service
@@ -10,8 +10,8 @@ Wants=updater.service
 Type=simple
 User=root
 WorkingDirectory=/home/iot/payload
-ExecStart=/usr/bin/echo "Payload Start: not installed"
-ExecStopPost=/usr/bin/echo "Payload Stop: not installed"
+ExecStart=/home/iot/payload/payload-start
+ExecStopPost=/home/iot/payload/payload-stop
 Restart=always
 RestartSec=5
 StandardOutput=journal
